# quiz_game

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: api_router.py  models.py  schema.py  utils.py
core/: config.py  sessions.py
