[tool.poetry]
name = "quiz-game"
version = "0.1.0"
description = ""
authors = ["Almaz Durusaliev"]
readme = "README.md"
packages = [{include = "quiz_game"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
psycopg2-binary = "^2.9.6"
sqlalchemy = "^2.0.14"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
isort = "^5.12.0"
flake8 = "^6.0.0"
black = "^23.3.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
